# game_engine

./: CMakeLists.txt  README.md
include/: Engine.h  Grid.h  Input.h  Logger.h  ModelLoader.h  Scene.h  Shader.h  Texture.h  Window.h
include/glad/: glad.h
models/: cube.mtl
shaders/: depth.frag  depth.vert  fragment.glsl  grid.frag  vertex.glsl
src/: Engine.cpp  Grid.cpp  Input.cpp  Logger.cpp  ModelLoader.cpp  Scene.cpp  Shader.cpp  Texture.cpp  Window.cpp  glad.c  main.cpp
